# img2ascii

./: .gitignore  CMakeLists.txt  README.md
include/img2ascii/: Arguments.h  AsciiArt.h  Image.h  ImageConverter.h  Palette.h
src/: main.cpp
src/ascii/: AsciiArt.cpp
src/core/: Arguments.cpp  Image.cpp  ImageConverter.cpp  Palette.cpp
